--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated": "1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "2.10.1",
+    "react-native-switch": "2.0.0",
     "react-native-vector-icons": "7.0.0",
     "react-navigation": "4.4.0",
     "react-navigation-tabs": "2.9.0",
